--- a/package.json
+++ b/package.json
@@ -3,19 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.15",
-    "@fortawesome/free-solid-svg-icons": "^5.7.2",
-    "@fortawesome/react-fontawesome": "^0.1.4",
-    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "nodemon": "^1.18.10",
+    "massive": "^5.7.5",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "react-dropzone": "^8.1.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.5",
-    "styled-components": "^4.1.3"
+    "react-scripts": "2.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
