--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "main": "server/server.js",
+  "proxy": "http://localhost:4850",
   "eslintConfig": {
     "extends": "react-app"
   },
